# paperview

./: .gitignore  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md
.claude-plugin/: marketplace.json
adapters/claude-code/.claude-plugin/: plugin.json
adapters/claude-code/skills/setup/: SKILL.md
core/: pyproject.toml
core/ppv/: __init__.py  cache.py  cli.py  ingest.py  mathx.py  providers.py  render.py  schema.py  text_norm.py  tts.py
core/remotion/: package-lock.json  package.json  tsconfig.json
core/remotion/src/: PaperVideo.tsx  Root.tsx  durations.json  layout.ts  plan.default.json  plan.json  theme.tsx
core/remotion/src/components/: SceneErrorBoundary.tsx  index.tsx
docs/: PAPERVIEW_V1.md
examples/: README.md  attention_is_all_you_need.plan.json
scripts/: setup.sh
