[project]
name = "paperview"
version = "0.1.0"
description = "Turn a research paper PDF (or a codebase) into a narrated, animated explainer video (deterministic, local)."
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24",
    "kokoro-onnx>=0.4",
    "soundfile>=0.12",
    "numpy>=1.24",
]

[project.scripts]
ppv = "ppv.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ppv"]
